<resources>
    <string name="app_name">Космос</string>
    <string name="bottom_navigation_view_menu_pod_title">Фото дня</string>
    <string name="bottom_navigation_view_menu_earth_title">Замля</string>
    <string name="bottom_navigation_view_menu_mars_title">Марс</string>
    <string name="bottom_navigation_view_menu_sun_title">Солнце</string>
    <string name="menu_settings_title">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_pod_text_view_date_text">Дата фотографии</string>
    <string name="fragment_pod_text_view_explanation_text">Описание фотографии</string>
    <string name="fragment_earth_text_view_date">Дата фотографии</string>
    <string name="fragment_mars_text_view_text">Дата фотографии</string>
    <string name="fragment_sun_text_view_title_text">Вспышки на солнце</string>
    <string name="fragment_sun_text_view_start_date_title_text">Время начала:</string>
    <string name="fragment_sun_text_view_peak_date_text">Время максимума:</string>
    <string name="fragment_sun_text_view_end_date_text">Время окончания:</string>
    <string name="fragment_sun_text_view_class_type_text">Класс:</string>
    <string name="fragment_sun_text_view_source_location_text">Источник:</string>
    <string name="settings_choose_theme_chip_group_default_text">Тема по-умолчанию</string>
    <string name="settings_choose_theme_chip_group_space_text">Космическая тема</string>
    <string name="settings_choose_theme_chip_group_moon_text">Лунная тема</string>
    <string name="settings_choose_theme_chip_group_mars_text">Марсианская тема</string>
</resources>