<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_sun_linear_layout_padding"
    tools:context=".sun.view.SunFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_sun_text_view_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_sun_text_view_title_layout_heigh"
        android:gravity="center"
        android:text="@string/fragment_sun_text_view_title_text" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/fragment_sun_linear_layout_padding">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_sun_text_view_start_date_title"
            android:layout_width="@dimen/fragment_sun_text_view_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_sun_text_view_start_date_title_text"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_sun_text_view_start_date_val"
            android:layout_width="@dimen/fragment_sun_text_view_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/fragment_sun_linear_layout_padding">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_sun_text_view_peak_date_title"
            android:layout_width="@dimen/fragment_sun_text_view_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_sun_text_view_peak_date_text"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_sun_text_view_peak_date_val"
            android:layout_width="@dimen/fragment_sun_text_view_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/fragment_sun_linear_layout_padding">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_sun_text_view_end_date_title"
            android:layout_width="@dimen/fragment_sun_text_view_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_sun_text_view_end_date_text"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_sun_text_view_end_date_val"
            android:layout_width="@dimen/fragment_sun_text_view_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/fragment_sun_linear_layout_padding">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_sun_text_view_class_type_title"
            android:layout_width="@dimen/fragment_sun_text_view_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_sun_text_view_class_type_text"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_sun_text_view_class_type_val"
            android:layout_width="@dimen/fragment_sun_text_view_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/fragment_sun_linear_layout_padding">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_sun_text_view_source_location_title"
            android:layout_width="@dimen/fragment_sun_text_view_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_sun_text_view_source_location_text"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_sun_text_view_source_location_val"
            android:layout_width="@dimen/fragment_sun_text_view_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/fragment_sun_linear_layout_padding">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_sun_text_view_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/fragment_sun_text_view_error_text_size"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>